--- a/package.json
+++ b/package.json
@@ -23,9 +23,22 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "apollo-server-adonis": "^1.4.0",
+    "config": "^3.2.3",
+    "graphql": "^14.4.2",
+    "graphql-relay": "^0.6.0",
+    "graphql-type-json": "^0.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "7.3.3",
+    "@babel/node": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-proposal-export-default-from": "7.2.0",
+    "@babel/plugin-proposal-function-bind": "7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "7.2.3",
+    "@babel/preset-env": "7.3.1"
+  },
   "autoload": {
     "App": "./app"
   }
