--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "Adonisjs boilerplate for API server with pre-configured JWT",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "node ace test"
+    "start": "babel-node  server.js",
+    "test": "node ace test",
+    "update-schema": "babel-node ./start/updateSchema.js"
   },
   "keywords": [
     "adonisjs",
@@ -24,6 +25,7 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "apollo-server": "^2.9.5",
     "apollo-server-adonis": "^1.4.0",
     "config": "^3.2.3",
     "graphql": "^14.4.2",
