--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Adonisjs boilerplate for API server with pre-configured JWT",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node  server.js",
+    "start": "nodemon --exec babel-node  server.js",
     "test": "node ace test",
     "update-schema": "babel-node ./start/updateSchema.js"
   },
@@ -39,7 +39,8 @@
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-function-bind": "7.2.0",
     "@babel/plugin-transform-flow-strip-types": "7.2.3",
-    "@babel/preset-env": "7.3.1"
+    "@babel/preset-env": "7.3.1",
+    "nodemon": "1.18.10"
   },
   "autoload": {
     "App": "./app"
