--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon --exec babel-node  server.js",
     "test": "node ace test",
     "update-schema": "babel-node ./start/updateSchema.js",
-    "migration": "babel-node ./node_modules/.bin/adonis migration:run"
+    "migration": "babel-node ./node_modules/.bin/adonis migration:run",
+    "serve": "babel-node ./node_modules/.bin/adonis serve --dev"
   },
   "keywords": [
     "adonisjs",
